--- a/Natural Language Processing/Assignment/IT2391_230436M_Part2.ipynb
+++ b/Natural Language Processing/Assignment/IT2391_230436M_Part2.ipynb
@@ -11,43 +11,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "b4a4a8b6-5f8f-4738-8635-a1a3c0c20d81",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: scikit-learn in c:\\users\\wongw\\anaconda3\\lib\\site-packages (1.3.0)\n",
-      "Collecting seaborn\n",
-      "  Using cached seaborn-0.13.2-py3-none-any.whl.metadata (5.4 kB)\n",
-      "Requirement already satisfied: numpy>=1.17.3 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from scikit-learn) (1.24.3)\n",
-      "Requirement already satisfied: scipy>=1.5.0 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from scikit-learn) (1.10.1)\n",
-      "Requirement already satisfied: joblib>=1.1.1 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from scikit-learn) (1.4.2)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from scikit-learn) (3.5.0)\n",
-      "Requirement already satisfied: pandas>=1.2 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from seaborn) (2.0.3)\n",
-      "Requirement already satisfied: matplotlib!=3.6.1,>=3.4 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from seaborn) (3.7.2)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (1.0.5)\n",
-      "Requirement already satisfied: cycler>=0.10 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (0.11.0)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (4.51.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (1.4.4)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (24.1)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (10.4.0)\n",
-      "Requirement already satisfied: pyparsing<3.1,>=2.3.1 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (3.0.9)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (2.9.0.post0)\n",
-      "Requirement already satisfied: importlib-resources>=3.2.0 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (6.4.0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from pandas>=1.2->seaborn) (2024.1)\n",
-      "Requirement already satisfied: tzdata>=2022.1 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from pandas>=1.2->seaborn) (2023.3)\n",
-      "Requirement already satisfied: zipp>=3.1.0 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from importlib-resources>=3.2.0->matplotlib!=3.6.1,>=3.4->seaborn) (3.20.2)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from python-dateutil>=2.7->matplotlib!=3.6.1,>=3.4->seaborn) (1.16.0)\n",
-      "Using cached seaborn-0.13.2-py3-none-any.whl (294 kB)\n",
-      "Installing collected packages: seaborn\n",
-      "Successfully installed seaborn-0.13.2\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# pip install scikit-learn seaborn "
    ]
@@ -190,50 +157,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "821a759f-6991-4a30-a227-9f93c7cb668a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y=df['species']\n",
-    "x=df['cleaned_text']\n",
-    "n_classes = y.shape[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "9bd93c00-856f-44a7-b16d-a248e12c64f3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(611,)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(611,)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "display(x.shape)\n",
-    "display(y.shape)\n",
-    "\n",
-    "X_train, X_test, y_train, y_test=train_test_split(x, y, test_size=0.2, random_state=42)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "f0cb338f",
    "metadata": {},
@@ -246,7 +169,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
+   "id": "42d0f332-a3c6-46bb-b6a5-07cff2348d4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df['cleaned_text']\n",
+    "Y=df['species']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49988490-4989-460d-94b3-6457233df9aa",
+   "metadata": {},
+   "source": [
+    "Setting test size and training size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6b66dffb-111a-4b0c-82da-ad00be7f4e7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test=train_test_split(X, Y, test_size=0.2, random_state=42, stratify=Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "6fa89483",
    "metadata": {},
    "outputs": [
@@ -255,10 +209,10 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "training: (488, 9711)\n",
-      "test: (123, 9711)\n",
+      "training: (488, 9687)\n",
+      "test: (123, 9687)\n",
       "\n",
-      "features: ['ability' 'able' 'able imitate' ... 'zhao renhui' 'zoonosis'\n",
+      "features: ['aa' 'aa sitesettingsid' 'ability' ... 'zimbabwe zambia' 'zoonosis'\n",
       " 'zoonosis singapore']\n",
       "      \n"
      ]
@@ -281,7 +235,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
+   "id": "ae1e3afd-d4f8-46cc-a04c-112e8d4f2abf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "with open('Count Vectorizer.pkl', 'wb') as f1: \n",
+    "    pickle.dump(cv, f1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "324187cc-3be2-4ce5-8cb4-57c07f75619d",
    "metadata": {},
    "outputs": [
@@ -325,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "6a9c8617",
    "metadata": {},
    "outputs": [
@@ -382,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "b185da73",
    "metadata": {},
    "outputs": [],
@@ -422,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "a245f95b",
    "metadata": {},
    "outputs": [
@@ -492,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "3788c115",
    "metadata": {},
    "outputs": [
@@ -644,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "d1040270",
    "metadata": {},
    "outputs": [
@@ -669,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "d1357d8b",
    "metadata": {},
    "outputs": [
@@ -707,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "580075e2",
    "metadata": {},
    "outputs": [
@@ -733,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "55908399",
    "metadata": {},
    "outputs": [
@@ -771,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "b64a8e9d",
    "metadata": {},
    "outputs": [],
@@ -792,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "684e1e0a",
    "metadata": {},
    "outputs": [],
@@ -812,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "54aad74a",
    "metadata": {},
    "outputs": [
@@ -838,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "f1e53fa2",
    "metadata": {},
    "outputs": [
@@ -872,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "c0f12a5d",
    "metadata": {},
    "outputs": [
@@ -909,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "db48fb3d",
    "metadata": {},
    "outputs": [],
@@ -926,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "242c3e34",
    "metadata": {},
    "outputs": [
@@ -952,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "72ed4ae3",
    "metadata": {},
    "outputs": [],
@@ -986,7 +952,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
