--- a/Natural Language Processing/Assignment/IT2391_230436M_Part1.ipynb
+++ b/Natural Language Processing/Assignment/IT2391_230436M_Part1.ipynb
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +612,7 @@
     "from nltk.tokenize import MWETokenizer \n",
     "\n",
     "#multi-class\n",
-    "mw=[('black','headed'),('black','headed','oriole'), ('black-naped', 'oriole'),('javan', 'myna')]\n",
+    "mw=[('black','headed'),('black','headed','oriole'), ('black-naped', 'oriole'),('javan', 'myna'), ('little', 'egret')]\n",
     "\n",
     "# Create a reference variable for Class MWETokenizer \n",
     "tk = MWETokenizer(mw) \n",
