--- a/Natural Language Processing/Assignment/IT2391_230436M_Part1.ipynb
+++ b/Natural Language Processing/Assignment/IT2391_230436M_Part1.ipynb
@@ -2141,7 +2141,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2155,7 +2155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
