--- a/Natural Language Processing/Assignment/IT2391_230436M_Part1.ipynb
+++ b/Natural Language Processing/Assignment/IT2391_230436M_Part1.ipynb
@@ -596,6 +596,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Examining Text Length. As a generalised rule, I want to print out the texts whcih are less than 25 words."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 233,
    "metadata": {},
@@ -617,13 +624,6 @@
     "sns.histplot(data['text_length'], bins=50)\n",
     "plt.title('Distribution of Text Lengths')\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Examining Tex Length. As a generalised rule, I want to print out the texts whcih are less than 25 words."
    ]
   },
   {
@@ -2155,7 +2155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
