--- a/Natural Language Processing/Assignment/IT2391_230436M_Part3.ipynb
+++ b/Natural Language Processing/Assignment/IT2391_230436M_Part3.ipynb
@@ -723,7 +723,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -737,7 +737,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.20"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
