--- a/TMSA Assignment/TopicModellingStarter.ipynb
+++ b/TMSA Assignment/TopicModellingStarter.ipynb
@@ -84,7 +84,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "    guuuu"
+   ]
   },
   {
    "cell_type": "markdown",
