--- a/TMSA Assignment/TopicModellingStarter.ipynb
+++ b/TMSA Assignment/TopicModellingStarter.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "For each sub-task, perform the necessary steps and **explain the rationale taken for each step in the Jupyter notebook**. \n",
     "\n",
-    "**Done by: \\<Enter your name and admin number here\\>**"
+    "**Done by: <\\Wong Wen Bing 230436M>**"
    ]
   },
   {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,10 +49,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DataSource</th>\n",
+       "      <th>Text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Open Opp</td>\n",
+       "      <td>Improving Quality and Safety of Care: &lt;p&gt;&lt;stro...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Open Opp</td>\n",
+       "      <td>Emergency Relief, Education, Health, Infrastru...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Open Opp</td>\n",
+       "      <td>Support for Philanthropy, Child Health, Empowe...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Open Opp</td>\n",
+       "      <td>Provision of Clinical Trial to Reduce Health I...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Open Opp</td>\n",
+       "      <td>Provision of Strategic Actions Supporting Larg...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  DataSource                                               Text\n",
+       "0   Open Opp  Improving Quality and Safety of Care: <p><stro...\n",
+       "1   Open Opp  Emergency Relief, Education, Health, Infrastru...\n",
+       "2   Open Opp  Support for Philanthropy, Child Health, Empowe...\n",
+       "3   Open Opp  Provision of Clinical Trial to Reduce Health I...\n",
+       "4   Open Opp  Provision of Strategic Actions Supporting Larg..."
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df=pd.read_excel('TM_Dataset.xlsx')\n",
+    "df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
