--- a/TMSA Assignment/DataPreparationStarters.ipynb
+++ b/TMSA Assignment/DataPreparationStarters.ipynb
@@ -38,13 +38,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import nltk \n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from nltk.tokenize import MWETokenizer \n",
+    "from nltk.corpus import stopwords #stopwords\n",
+    "from nltk.stem.wordnet import WordNetLemmatizer #lemmatization\n",
+    "import re\n"
    ]
   },
   {
@@ -52,94 +58,6 @@
    "metadata": {},
    "source": [
     "## Load Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>DataSource</th>\n",
-       "      <th>Text</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Open Opp</td>\n",
-       "      <td>Improving Quality and Safety of Care: &lt;p&gt;&lt;stro...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Open Opp</td>\n",
-       "      <td>Emergency Relief, Education, Health, Infrastru...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Open Opp</td>\n",
-       "      <td>Support for Philanthropy, Child Health, Empowe...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Open Opp</td>\n",
-       "      <td>Provision of Clinical Trial to Reduce Health I...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Open Opp</td>\n",
-       "      <td>Provision of Strategic Actions Supporting Larg...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  DataSource                                               Text\n",
-       "0   Open Opp  Improving Quality and Safety of Care: <p><stro...\n",
-       "1   Open Opp  Emergency Relief, Education, Health, Infrastru...\n",
-       "2   Open Opp  Support for Philanthropy, Child Health, Empowe...\n",
-       "3   Open Opp  Provision of Clinical Trial to Reduce Health I...\n",
-       "4   Open Opp  Provision of Strategic Actions Supporting Larg..."
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dataset=pd.read_excel('TM_Dataset.xlsx')\n",
-    "dataset.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Data Understanding\n",
-    "Perform the necessary steps and explain the rationale taken here.\n",
-    "\n"
    ]
   },
   {
@@ -217,7 +135,17 @@
     }
    ],
    "source": [
+    "dataset=pd.read_excel('TM_Dataset.xlsx')\n",
     "dataset.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Understanding\n",
+    "Perform the necessary steps and explain the rationale taken here.\n",
+    "\n"
    ]
   },
   {
@@ -227,10 +155,66 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DataSource</th>\n",
+       "      <th>Text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Open Opp</td>\n",
+       "      <td>Improving Quality and Safety of Care: &lt;p&gt;&lt;stro...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Open Opp</td>\n",
+       "      <td>Emergency Relief, Education, Health, Infrastru...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Open Opp</td>\n",
+       "      <td>Support for Philanthropy, Child Health, Empowe...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Open Opp</td>\n",
+       "      <td>Provision of Clinical Trial to Reduce Health I...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Open Opp</td>\n",
+       "      <td>Provision of Strategic Actions Supporting Larg...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "DataSource    0\n",
-       "Text          0\n",
-       "dtype: int64"
+       "  DataSource                                               Text\n",
+       "0   Open Opp  Improving Quality and Safety of Care: <p><stro...\n",
+       "1   Open Opp  Emergency Relief, Education, Health, Infrastru...\n",
+       "2   Open Opp  Support for Philanthropy, Child Health, Empowe...\n",
+       "3   Open Opp  Provision of Clinical Trial to Reduce Health I...\n",
+       "4   Open Opp  Provision of Strategic Actions Supporting Larg..."
       ]
      },
      "execution_count": 4,
@@ -239,7 +223,7 @@
     }
    ],
    "source": [
-    "dataset.isnull().sum()"
+    "dataset.head()"
    ]
   },
   {
@@ -250,10 +234,32 @@
     {
      "data": {
       "text/plain": [
-       "46"
+       "DataSource    0\n",
+       "Text          0\n",
+       "dtype: int64"
       ]
      },
      "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "46"
+      ]
+     },
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,12 +278,151 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "remove duplicate"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 3947 entries, 0 to 3992\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column      Non-Null Count  Dtype \n",
+      "---  ------      --------------  ----- \n",
+      " 0   DataSource  3947 non-null   object\n",
+      " 1   Text        3947 non-null   object\n",
+      "dtypes: object(2)\n",
+      "memory usage: 92.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data=dataset.drop_duplicates()\n",
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# using regex to remove the html tags"
+    "# using regex to remove the html tags\n",
+    "lemma=WordNetLemmatizer() #lemmatization\n",
+    "stopwordss=stopwords.words('english') #list of stopwords\n",
+    "\n",
+    "def preprocess_text(text):\n",
+    "    text = text.lower()  # Convert to lowercase\n",
+    "    text = re.sub(r'[^a-z\\s][a-z]', ' ', text)\n",
+    "    text = re.sub(r'\\s\\s+',' ', text)\n",
+    "    words=word_tokenize(text)\n",
+    "    text=[]\n",
+    "    for word in words: \n",
+    "        if word not in stopwordss: \n",
+    "            normalized = lemma.lemmatize(word)\n",
+    "            text.append(normalized)\n",
+    "    return ' '.join(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DataSource</th>\n",
+       "      <th>Text</th>\n",
+       "      <th>cleaned_text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Open Opp</td>\n",
+       "      <td>Improving Quality and Safety of Care: &lt;p&gt;&lt;stro...</td>\n",
+       "      <td>improving quality safety care p strong opportu...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Open Opp</td>\n",
+       "      <td>Emergency Relief, Education, Health, Infrastru...</td>\n",
+       "      <td>emergency relief education health infrastructu...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Open Opp</td>\n",
+       "      <td>Support for Philanthropy, Child Health, Empowe...</td>\n",
+       "      <td>support philanthropy child health empowerment ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Open Opp</td>\n",
+       "      <td>Provision of Clinical Trial to Reduce Health I...</td>\n",
+       "      <td>provision clinical trial reduce health inequit...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Open Opp</td>\n",
+       "      <td>Provision of Strategic Actions Supporting Larg...</td>\n",
+       "      <td>provision strategic action supporting large sc...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  DataSource                                               Text  \\\n",
+       "0   Open Opp  Improving Quality and Safety of Care: <p><stro...   \n",
+       "1   Open Opp  Emergency Relief, Education, Health, Infrastru...   \n",
+       "2   Open Opp  Support for Philanthropy, Child Health, Empowe...   \n",
+       "3   Open Opp  Provision of Clinical Trial to Reduce Health I...   \n",
+       "4   Open Opp  Provision of Strategic Actions Supporting Larg...   \n",
+       "\n",
+       "                                        cleaned_text  \n",
+       "0  improving quality safety care p strong opportu...  \n",
+       "1  emergency relief education health infrastructu...  \n",
+       "2  support philanthropy child health empowerment ...  \n",
+       "3  provision clinical trial reduce health inequit...  \n",
+       "4  provision strategic action supporting large sc...  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset['cleaned_text'] = dataset['Text'].apply(lambda x: preprocess_text(x))\n",
+    "dataset.head()"
    ]
   },
   {
@@ -289,10 +434,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dataset.to_csv('230436mcleanedset.csv')"
+   ]
   },
   {
    "cell_type": "markdown",
