--- a/TMSA Assignment/SentimentClassificationStarter.ipynb
+++ b/TMSA Assignment/SentimentClassificationStarter.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -88,13 +88,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "138718fd1aae4993b3b4d1848cb9c56f",
+       "model_id": "87eb0df176394cebb01e5fc821a53cc3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
        "4             0              False  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,10 +281,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#require only necessary "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -419,7 +421,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/53/1_08_22s37n3r4dm51m_8m7c0000gn/T/ipykernel_10386/3144702325.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/53/1_08_22s37n3r4dm51m_8m7c0000gn/T/ipykernel_9257/3144702325.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -545,7 +547,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/53/1_08_22s37n3r4dm51m_8m7c0000gn/T/ipykernel_10386/2576620970.py:1: SettingWithCopyWarning: \n",
+      "/var/folders/53/1_08_22s37n3r4dm51m_8m7c0000gn/T/ipykernel_9257/2576620970.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -689,12 +691,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/53/1_08_22s37n3r4dm51m_8m7c0000gn/T/ipykernel_10386/569541139.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/53/1_08_22s37n3r4dm51m_8m7c0000gn/T/ipykernel_9257/569541139.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data.dropna(inplace=True)\n",
-      "/var/folders/53/1_08_22s37n3r4dm51m_8m7c0000gn/T/ipykernel_10386/569541139.py:3: SettingWithCopyWarning: \n",
+      "/var/folders/53/1_08_22s37n3r4dm51m_8m7c0000gn/T/ipykernel_9257/569541139.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -829,6 +831,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#observing the distribution\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [],
@@ -838,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -939,6 +950,47 @@
     "f1score=f1_score(y_test, y_pred_cv,average='weighted')\n",
     "print(f'f1 score: {f1score}')\n",
     "print(classification_report(y_test, y_pred_cv))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Model 2 Multinomial DB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "    negative       0.43      0.43      0.43      1802\n",
+      "    positive       0.95      0.95      0.95     20710\n",
+      "\n",
+      "    accuracy                           0.91     22512\n",
+      "   macro avg       0.69      0.69      0.69     22512\n",
+      "weighted avg       0.91      0.91      0.91     22512\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix\n",
+    "\n",
+    "classifier = DecisionTreeClassifier(random_state=42)\n",
+    "classifier.fit(X_train_cv, y_train)\n",
+    "\n",
+    "# classification report\n",
+    "print(classification_report(y_test, classifier.predict(X_test_cv)))\n"
    ]
   },
   {
