--- a/TMSA Assignment/DataPreparationStarters.ipynb
+++ b/TMSA Assignment/DataPreparationStarters.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "4   Open Opp  Provision of Strategic Actions Supporting Larg..."
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
        "4   Open Opp  Provision of Strategic Actions Supporting Larg..."
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        "46"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,8 @@
     "def preprocess_text(text):\n",
     "    text = text.lower()  # Convert to lowercase\n",
     "    text = re.sub(r'<[^>]*>', '', text)\n",
-    "    text = re.sub(r'\\s\\s+',' ', text)\n",
+    "    text = re.sub(r'\\s\\s+','', text)\n",
+    "    text=re.sub(r'[^A-Za-z]', ' ', text)\n",
     "    words=word_tokenize(text)\n",
     "    text=[]\n",
     "    for word in words: \n",
@@ -335,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -369,19 +370,19 @@
        "      <th>0</th>\n",
        "      <td>Open Opp</td>\n",
        "      <td>Improving Quality and Safety of Care: &lt;p&gt;&lt;stro...</td>\n",
-       "      <td>improving quality safety care : opportunity ba...</td>\n",
+       "      <td>improving quality safety care opportunity back...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Open Opp</td>\n",
        "      <td>Emergency Relief, Education, Health, Infrastru...</td>\n",
-       "      <td>emergency relief , education , health , infras...</td>\n",
+       "      <td>emergency relief education health infrastructu...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Open Opp</td>\n",
        "      <td>Support for Philanthropy, Child Health, Empowe...</td>\n",
-       "      <td>support philanthropy , child health , empowerm...</td>\n",
+       "      <td>support philanthropy child health empowerment ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -393,7 +394,7 @@
        "      <th>4</th>\n",
        "      <td>Open Opp</td>\n",
        "      <td>Provision of Strategic Actions Supporting Larg...</td>\n",
-       "      <td>provision strategic action supporting large-sc...</td>\n",
+       "      <td>provision strategic action supporting large sc...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -408,14 +409,14 @@
        "4   Open Opp  Provision of Strategic Actions Supporting Larg...   \n",
        "\n",
        "                                        cleaned_text  \n",
-       "0  improving quality safety care : opportunity ba...  \n",
-       "1  emergency relief , education , health , infras...  \n",
-       "2  support philanthropy , child health , empowerm...  \n",
+       "0  improving quality safety care opportunity back...  \n",
+       "1  emergency relief education health infrastructu...  \n",
+       "2  support philanthropy child health empowerment ...  \n",
        "3  provision clinical trial reduce health inequit...  \n",
-       "4  provision strategic action supporting large-sc...  "
+       "4  provision strategic action supporting large sc...  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,11 +435,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.to_csv('230436mcleanedset.csv')"
+    "dataset.to_csv('230436m_cleanedset.csv')"
    ]
   },
   {
